--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <img src="img/yo1.png" alt="">
             </div>
             <h1>Oscar Olivares Meriño</h1>
-            <h2>Full Stack Developer</h2>
+            <h2>Desarrollador de Software</h2>
             <div class="social">
                 <a href="http://github.com/OscarOlivaresDev" target="_blank"><i class="fa-brands fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/oscar-andres-olivares-meri%C3%B1o-6a8069262/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
@@ -50,7 +50,7 @@
     <section id="aboutme" class="aboutme">
         <div class="container-seccion">
             <h2>About Me</h2>
-            <p style="font-size: 20px;"><span>¡Hola, mi nombre es Oscar! Actualmente soy estudiante de noveno semestre en la carrera de Ingeniería de Sistemas y Computación. Apasionado por el aprendizaje autodidacta, la programación y las nuevas tecnologías. Mi objetivo es combinar mis habilidades técnicas con mi pasión por la resolución de problemas para crear soluciones innovadoras y eficientes. Trabajar en proyectos de desarrollo me han permitido adquirir un conocimiento en arquitecturas de software y metodologías ágiles. 🤓​💻​</span>
+            <p style="font-size: 20px;"><span>¡Hola, mi nombre es Oscar! Actualmente soy estudiante de noveno semestre en la carrera de Ingeniería de Sistemas y Computación. Apasionado por el aprendizaje autodidacta, la programación y las nuevas tecnologías. Mi objetivo es combinar mis habilidades técnicas con mi pasión por la resolución de problemas para crear soluciones innovadoras y eficientes. Trabajar como freelancer en proyectos de desarrollo me han permitido adquirir un conocimiento en arquitecturas de software y metodologías ágiles. 🤓​💻​</span>
             </p>
             <div class="row">
                 <div class="col">
@@ -97,7 +97,7 @@
                     </div>
                 </div>
             </div>
-            <a download="Hoja de vida - Oscar Olivares Meriño" href="cvOscarOlivares.pdf">
+            <a download="Hoja de vida - Oscar Olivares Meriño" href="curriculumOscarOlivares.pdf">
                 Descargar CV <i class="fa-solid fa-download"></i>
                 <span class="overlay"></span>
             </a>
@@ -224,7 +224,7 @@
     </section>
 
     <!--Curriculum-->
-    <section id="curriculum" class="curriculum">
+    <!--<section id="curriculum" class="curriculum">
         <div class="container-seccion">
             <h2>Curriculum</h2>
             <div class="row">
@@ -244,14 +244,14 @@
                     <div class="item izq">
                         <h2>Ingeniería de Sistemas y Computación</h2>
                         <span class="casa">Corporación Universitaria Latinoamericana CUL</span>
-                        <span class="fecha">Semestre: IX (Actual)</span>
+                        <span class="fecha">Semestre: Noveno (Actual)</span>
                         <div class="conectorr">
                             <div class="circlei"></div>
                         </div>
                     </div>
                 </div>
 
-                <div class="col derecha">
+                <!--<div class="col derecha">
                     <h3>Experiencia</h3>
                     <div class="item der">
                         <h2>Desarrollador de Software</h2>
@@ -276,10 +276,10 @@
                             <div class="circled"></div>
                         </div>
                     </div>
-                </div>
-            </div>
+                </div>-->
+            <!--</div>
         </div>
-    </section>
+    </section>-->
 
     <!--Portfolio-->
     <section id="portfolio" class="portfolio">
