--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <section id="aboutme" class="aboutme">
         <div class="container-seccion">
             <h2>About Me</h2>
-            <p style="font-size: 20px;"><span>¡Hola, mi nombre es Oscar! Actualmente soy estudiante de noveno semestre en la carrera de Ingeniería de Sistemas y Computación. Apasionado por el aprendizaje autodidacta, la programación y las nuevas tecnologías. Mi objetivo es combinar mis habilidades técnicas con mi pasión por la resolución de problemas para crear soluciones innovadoras y eficientes. Trabajar como freelancer en proyectos de desarrollo me han permitido adquirir un conocimiento en arquitecturas de software y metodologías ágiles. 🤓​💻​</span>
+            <p style="font-size: 20px;"><span>¡Hola, mi nombre es Oscar! Actualmente soy estudiante de décimo semestre en la carrera de Ingeniería de Sistemas y Computación. Apasionado por el aprendizaje autodidacta, la programación y las nuevas tecnologías. Mi objetivo es combinar mis habilidades técnicas con mi pasión por la resolución de problemas para crear soluciones innovadoras y eficientes. Trabajar como freelancer en proyectos de desarrollo me han permitido adquirir un conocimiento en arquitecturas de software y metodologías ágiles. 🤓​💻​</span>
             </p>
             <div class="row">
                 <div class="col">
@@ -62,7 +62,7 @@
                         </li>
                         <li>
                             <strong>Phone</strong>
-                            +57 3134606696
+                            +57 3148136892
                         </li>
                         <li>
                             <strong>Email</strong>
@@ -97,7 +97,7 @@
                     </div>
                 </div>
             </div>
-            <a download="Hoja de vida - Oscar Olivares Meriño" href="curriculumOscarOlivares.pdf">
+            <a download="Hoja de vida - Oscar Olivares Meriño" href="hojaDeVidaOscar.pdf">
                 Descargar CV <i class="fa-solid fa-download"></i>
                 <span class="overlay"></span>
             </a>
@@ -224,7 +224,7 @@
     </section>
 
     <!--Curriculum-->
-    <!--<section id="curriculum" class="curriculum">
+    <section id="curriculum" class="curriculum">
         <div class="container-seccion">
             <h2>Curriculum</h2>
             <div class="row">
@@ -244,27 +244,23 @@
                     <div class="item izq">
                         <h2>Ingeniería de Sistemas y Computación</h2>
                         <span class="casa">Corporación Universitaria Latinoamericana CUL</span>
-                        <span class="fecha">Semestre: Noveno (Actual)</span>
+                        <span class="fecha">Semestre: Décimo (Actual)</span>
+                        <div class="conectorr">
+                            <div class="circlei"></div>
+                        </div>
+                    </div>
+                    <div class="item izq">
+                        <h2>Tecnólogo en Análisis y Desarrollo de Software</h2>
+                        <span class="casa">Servicio Nacional de Aprendizaje SENA</span>
+                        <span class="fecha">En curso - Actual</span>
                         <div class="conectorr">
                             <div class="circlei"></div>
                         </div>
                     </div>
                 </div>
 
-                <!--<div class="col derecha">
+                <div class="col derecha">
                     <h3>Experiencia</h3>
-                    <div class="item der">
-                        <h2>Desarrollador de Software</h2>
-                        <span class="casa">Sistemas Infotec S.A.S</span>
-                        <span class="fecha">2022 - 2023</span>
-                        <p> Tareas: Desarrollo web Frontend. 
-                            Tecnlogías: HTML, CSS, Bootstrap, JavaScript, Angular y TypeScript.
-                            Metodologia ágil: Scrum 
-                        </p>
-                        <div class="conectord">
-                            <div class="circled"></div>
-                        </div>
-                    </div>
                     <div class="item der">
                         <h2>Analista de Desarrollo de Software</h2>
                         <span class="casa">Viva 1A IPS</span>
@@ -276,10 +272,10 @@
                             <div class="circled"></div>
                         </div>
                     </div>
-                </div>-->
-            <!--</div>
+                </div>
+            </div>
         </div>
-    </section>-->
+    </section>
 
     <!--Portfolio-->
     <section id="portfolio" class="portfolio">
